--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-<h1>Mateus Melo e Silva A. de Figueiredo</h1>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="UTF-8">
+    <title>Mateus Melo Website</title>
+  </head>
+  <body>
+    <h1>Mateus Melo e Silva A. de Figueiredo</h1>
+    <img src="perfilLN.jpeg" alt="foto do perfil">
+  </body>
+</html>
