--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
   <body>
     <h1>Mateus Melo e Silva A. de Figueiredo</h1>
     <img src="perfilLN.jpeg" alt="foto do perfil">
+    <p>Formado em sistemas de informação, apaixonado por tecnologia e desenvolvimento.
+       Estudo Desenvolvimento Web na Trybe, uma escola que ensina a programar, a aprender e a trabalhar.</p>
   </body>
 </html>
