adicao das habilidades

--- a/index.html
+++ b/index.html
@@ -5,9 +5,22 @@
     <title>Mateus Melo Website</title>
   </head>
   <body>
-    <h1>Mateus Melo e Silva A. de Figueiredo</h1>
-    <img src="perfilLN.jpeg" alt="foto do perfil">
-    <p>Formado em sistemas de informação, apaixonado por tecnologia e desenvolvimento.
-       Estudo Desenvolvimento Web na Trybe, uma escola que ensina a programar, a aprender e a trabalhar.</p>
+    <header>
+      <h1>Mateus Melo e Silva A. de Figueiredo</h1>
+      <img src="perfilLN.jpeg" alt="foto do perfil">
+      <p>Formado em sistemas de informação, apaixonado por tecnologia e desenvolvimento.
+         Estudo Desenvolvimento Web na Trybe, uma escola que ensina a programar, a aprender e a trabalhar.</p>
+    </header>
+    <section>
+      <ul>
+        <li>HTML</li>
+        <li>CSS</li>
+        <li>JavaScript</li>
+        <li>Bash</li>
+        <li>Git</li>
+        <li>ReactJS</li>
+        <li>Node</li>
+      </ul>
+    </section>
   </body>
 </html>
