--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <header>
       <h1>Mateus Melo e Silva A. de Figueiredo</h1>
       <img src="perfilLN.jpeg" alt="foto do perfil">
+      <a href="perfilLN.jpeg">link da foto</a>
       <p>Formado em sistemas de informação, apaixonado por tecnologia e desenvolvimento.
          Estudo Desenvolvimento Web na Trybe, uma escola que ensina a programar, a aprender e a trabalhar.</p>
     </header>
