adicao da link blog favorito

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       <h1>Mateus Melo e Silva A. de Figueiredo</h1>
       <img src="perfilLN.jpeg" alt="foto do perfil">
       <a href="perfilLN.jpeg">link da foto</a>
+      <a href="https://www.youtube.com/c/FabioAkita1990" target="_blank">meu blog favorito</a>
       <p>Formado em sistemas de informação, apaixonado por tecnologia e desenvolvimento.
          Estudo Desenvolvimento Web na Trybe, uma escola que ensina a programar, a aprender e a trabalhar.</p>
     </header>
