destaques em negrito e italico

--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
     </header>
     <section>
       <ul>
-        <li>HTML</li>
-        <li>CSS</li>
-        <li>JavaScript</li>
-        <li>Bash</li>
-        <li>Git</li>
+        <li><b>HTML</b></li>
+        <li><b>CSS</b></li>
+        <li><b>JavaScript</b></li>
+        <li><i>Bash</i></li>
+        <li><i>Git</i></li>
         <li>ReactJS</li>
         <li>Node</li>
       </ul>
