links para as diferentes secoes

--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <title>Mateus Melo Website</title>
   </head>
   <body>
+    <nav>
+      <ul>
+        <li><a href="#header">Principal</a></li>
+        <li><a href="#section">Habilidades</a></li>
+      </ul>
+    </nav>
     <header>
       <h1>Mateus Melo e Silva A. de Figueiredo</h1>
       <img src="perfilLN.jpeg" alt="foto do perfil">
