--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <img src="perfilLN.jpeg" alt="foto do perfil">
       <a href="perfilLN.jpeg">link da foto</a>
       <a href="https://www.youtube.com/c/FabioAkita1990" target="_blank">meu blog favorito</a>
-      <p>Formado em sistemas de informação, apaixonado por tecnologia e desenvolvimento.
+      <p>Sou <span class="nacionalidade">Brasileiro</span> de <span class="cidade">Sao Luis, MA</span>. Formado em sistemas de informação, apaixonado por tecnologia e desenvolvimento.
          Estudo Desenvolvimento Web na Trybe, uma escola que ensina a programar, a aprender e a trabalhar.</p>
     </header>
     <section>
