tamanhos diferentes na lista

--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
     </header>
     <section>
       <ul>
-        <li><b>HTML</b></li>
-        <li><b>CSS</b></li>
-        <li><b>JavaScript</b></li>
+        <li><span class="accent">HTML</span></li>
+        <li><span class="accent">CSS</span></li>
+        <li><span class="accent">JavaScript</span ></li>
         <li><i>Bash</i></li>
         <li><i>Git</i></li>
         <li>ReactJS</li>
