requisitos do dia 3

--- a/index.html
+++ b/index.html
@@ -14,11 +14,14 @@
     </nav>
     <header>
       <h1>Mateus Melo e Silva A. de Figueiredo</h1>
-      <img src="perfilLN.jpeg" alt="foto do perfil">
-      <a href="perfilLN.jpeg">link da foto</a>
-      <a href="https://www.youtube.com/c/FabioAkita1990" target="_blank">meu blog favorito</a>
-      <p>Sou <span class="nacionalidade">Brasileiro</span> de <span class="cidade">Sao Luis, MA</span>. Formado em sistemas de informação, apaixonado por tecnologia e desenvolvimento.
-         Estudo Desenvolvimento Web na Trybe, uma escola que ensina a programar, a aprender e a trabalhar.</p>
+      <div class="foto-desc">
+        <img src="perfilLN.jpeg" alt="foto do perfil">
+        <p>Sou <span class="nacionalidade">Brasileiro</span> de <span class="cidade">Sao Luis, MA</span>. Formado em sistemas de informação, apaixonado por tecnologia e desenvolvimento.
+          Estudo Desenvolvimento Web na Trybe, uma escola que ensina a programar, a aprender e a trabalhar.</p>
+
+      </div>
+        <a href="https://www.youtube.com/c/FabioAkita1990" target="_blank">meu blog favorito</a>
+        <a href="perfilLN.jpeg">link da foto</a>
     </header>
     <section>
       <ul>
